# accident-recreate

./: .env.example  .eslintrc.enterprise.js  .eslintrc.js  .gitignore  .prettierignore  AGENT_12_FINAL_SUMMARY.md  AGENT_12_READINESS_REPORT.md  AGENT_12_STATUS.md  BUILD_EXECUTION_REPORT.md  BUILD_METRICS.md  BUILD_SETUP_SUMMARY.txt  BUILD_STATUS.md  CHANGELOG.md  ERROR_FIXER_AGENT_DELIVERY.md  ERROR_HANDLING_INFRASTRUCTURE.md  ERROR_HANDLING_QUICK_REFERENCE.md  ERROR_INFRASTRUCTURE_STATS.md  NOTIFICATIONS_SYSTEM.md  PROJECT_SETUP.md  README.md  SCRATCHPAD.md  SCRATCHPAD_V0.3.0.md  TELEMETRY_SUMMARY.md  package-lock.json  package.json  tsconfig.api.json  tsconfig.json  tsconfig.strict.json  webpack.main.config.js  webpack.renderer.config.js
rust-core/: .gitignore  .rustfmt.toml  AGENT1_SUMMARY.md  ARCHITECTURE.md  BUILD_LOG.md  CONTRIBUTING.md  Cargo.toml  ERROR_FIXES.md  Makefile  QUICKSTART.md  README.md  SCRATCHPAD.md  SETUP_SUMMARY.md  TREE.txt  WARNING_FIXES.md  clippy.toml  deny.toml  setup.sh
rust-core/.cargo/: config.toml
rust-core/crates/accuscene-a11y/: Cargo.toml
rust-core/crates/accuscene-a11y/src/: config.rs  error.rs  lib.rs
rust-core/crates/accuscene-algorithms/: Cargo.toml
rust-core/crates/accuscene-algorithms/src/: benchmarks.rs  config.rs  error.rs  lib.rs
rust-core/crates/accuscene-analytics/: Cargo.toml
rust-core/crates/accuscene-analytics/benches/: analytics_bench.rs
rust-core/crates/accuscene-analytics/src/: anomaly.rs  config.rs  engine.rs  error.rs  forecasting.rs  lib.rs  query.rs  storage.rs  windowing.rs
rust-core/crates/accuscene-cache/: Cargo.toml  README.md
rust-core/crates/accuscene-cache/src/: computed.rs  config.rs  distributed.rs  error.rs  invalidation.rs  key.rs  lib.rs  middleware.rs  partitioning.rs  preload.rs  serialization.rs  stats.rs  tags.rs  value.rs
rust-core/crates/accuscene-cluster/: Cargo.toml
rust-core/crates/accuscene-cluster/src/: config.rs  coordinator.rs  error.rs  failover.rs  lib.rs  load_balancing.rs
rust-core/crates/accuscene-compression/: Cargo.toml
rust-core/crates/accuscene-compression/src/: adaptive.rs  archive.rs  benchmark.rs  delta.rs  dictionary.rs  encryption.rs  error.rs  lib.rs  streaming.rs  traits.rs
rust-core/crates/accuscene-core/: Cargo.toml
rust-core/crates/accuscene-core/src/: config.rs  error.rs  lib.rs  traits.rs  utils.rs
rust-core/crates/accuscene-crypto/: Cargo.toml  README.md
rust-core/crates/accuscene-crypto/src/: certificate.rs  envelope.rs  error.rs  integrity.rs  kdf.rs  lib.rs  random.rs  secure_memory.rs  token.rs  vault.rs
rust-core/crates/accuscene-dashboard/: Cargo.toml
rust-core/crates/accuscene-dashboard/src/: config.rs  error.rs  layout.rs  lib.rs  persistence.rs  state.rs
rust-core/crates/accuscene-database/: Cargo.toml
rust-core/crates/accuscene-database/src/: audit.rs  backup.rs  config.rs  connection.rs  error.rs  lib.rs  pool.rs  search.rs  transaction.rs
rust-core/crates/accuscene-errors/: Cargo.toml
rust-core/crates/accuscene-errors/src/: codes.rs  context.rs  lib.rs  macros.rs  recovery.rs  reporting.rs  types.rs
rust-core/crates/accuscene-eventsourcing/: Cargo.toml
rust-core/crates/accuscene-eventsourcing/src/: aggregate.rs  bus.rs  command.rs  config.rs  error.rs  event.rs  lib.rs  projection.rs  query.rs  saga.rs  snapshot.rs
rust-core/crates/accuscene-ffi/: Cargo.toml  build.rs
rust-core/crates/accuscene-ffi/src/: conversions.rs  error.rs  lib.rs
rust-core/crates/accuscene-gestures/: Cargo.toml
rust-core/crates/accuscene-gestures/src/: config.rs  error.rs  events.rs  lib.rs  state.rs
rust-core/crates/accuscene-integration/: Cargo.toml
rust-core/crates/accuscene-integration/src/: config.rs  events.rs  facade.rs  health.rs  lib.rs  registry.rs  runtime.rs
rust-core/crates/accuscene-jobs/: Cargo.toml
rust-core/crates/accuscene-jobs/src/: batch.rs  error.rs  executor.rs  job.rs  lib.rs  metrics.rs  persistence.rs  pipeline.rs  progress.rs  result.rs  retry.rs  throttle.rs
rust-core/crates/accuscene-ml/: Cargo.toml
rust-core/crates/accuscene-ml-v3/: Cargo.toml
rust-core/crates/accuscene-ml-v3/src/: config.rs  error.rs  lib.rs
rust-core/crates/accuscene-ml/src/: config.rs  error.rs  lib.rs  pipeline.rs  serving.rs
rust-core/crates/accuscene-notifications/: Cargo.toml
rust-core/crates/accuscene-notifications/src/: aggregator.rs  channel.rs  config.rs  dispatcher.rs  error.rs  lib.rs  preferences.rs  scheduler.rs  store.rs  templates.rs  types.rs
rust-core/crates/accuscene-offline/: Cargo.toml
rust-core/crates/accuscene-offline/src/: config.rs  error.rs  lib.rs  versioning.rs
rust-core/crates/accuscene-performance/: Cargo.toml
rust-core/crates/accuscene-performance/src/: config.rs  error.rs  lib.rs
rust-core/crates/accuscene-physics/: Cargo.toml
rust-core/crates/accuscene-physics-v3/: Cargo.toml
rust-core/crates/accuscene-physics-v3/src/: config.rs  error.rs  lib.rs
rust-core/crates/accuscene-physics/src/: energy.rs  engine.rs  friction.rs  lib.rs  parallel.rs  reconstruction.rs  simulation.rs  speed.rs
rust-core/crates/accuscene-preferences/: Cargo.toml
rust-core/crates/accuscene-preferences/src/: config.rs  error.rs  export.rs  lib.rs  migration.rs  sync.rs
rust-core/crates/accuscene-search/: Cargo.toml
rust-core/crates/accuscene-search/src/: config.rs  error.rs  highlighting.rs  lib.rs  suggestions.rs
rust-core/crates/accuscene-security/: Cargo.toml
rust-core/crates/accuscene-security-v3/: Cargo.toml  README.md
rust-core/crates/accuscene-security-v3/src/: config.rs  error.rs  lib.rs
rust-core/crates/accuscene-security/src/: config.rs  error.rs  lib.rs
rust-core/crates/accuscene-sso/: Cargo.toml
rust-core/crates/accuscene-sso/src/: audit.rs  config.rs  error.rs  lib.rs
rust-core/crates/accuscene-streaming/: Cargo.toml
rust-core/crates/accuscene-streaming/src/: auth.rs  backpressure.rs  buffer.rs  checkpoint.rs  (+14 more)
rust-core/crates/accuscene-telemetry/: Cargo.toml
rust-core/crates/accuscene-transfer/: Cargo.toml
rust-core/crates/accuscene-visualization/: Cargo.toml
(+1142 files in other folders)
