[workspace]
resolver = "2"
members = [
    "crates/accuscene-core",
    "crates/accuscene-ffi",
    "crates/accuscene-physics",
    "crates/accuscene-compression",
    "crates/accuscene-database",
    "crates/accuscene-crypto",
    "crates/accuscene-jobs",
    "crates/accuscene-streaming",
    "crates/accuscene-cache",
    "crates/accuscene-telemetry",
    "crates/accuscene-cluster",
    "crates/accuscene-eventsourcing",
    "crates/accuscene-analytics",
    "crates/accuscene-ml",
    "crates/accuscene-security",
    # v0.2.5 new crates
    "crates/accuscene-errors",
    "crates/accuscene-dashboard",
    "crates/accuscene-notifications",
    "crates/accuscene-visualization",
    "crates/accuscene-gestures",
    "crates/accuscene-offline",
    "crates/accuscene-sso",
    "crates/accuscene-search",
    "crates/accuscene-transfer",
    "crates/accuscene-preferences",
    "crates/accuscene-a11y",
    "crates/accuscene-integration",
    # v0.3.0 new crates
    "crates/accuscene-algorithms",
    "crates/accuscene-ml-v3",
    "crates/accuscene-performance",
    "crates/accuscene-physics-v3",
    "crates/accuscene-security-v3",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
authors = ["AccuScene Enterprise Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/accuscene/enterprise"
homepage = "https://accuscene.com"
keywords = ["accident-recreation", "forensics", "simulation", "enterprise"]
categories = ["simulation", "science"]

[workspace.dependencies]
# Core dependencies - shared across all crates
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Data structures
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"

# Serialization formats
bincode = "1.3"
postcard = "1.0"
rmp-serde = "1.1"

# Compression
lz4 = "1.24"
zstd = "0.13"
flate2 = "1.0"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP/Network
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }

# FFI
napi = "2.15"
napi-derive = "2.15"

# Physics/Math
nalgebra = "0.32"
ndarray = "0.15"
num-traits = "0.2"

# UUID and Time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Metrics and observability
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Job processing
crossbeam = "0.8"
rayon = "1.8"

# Clustering/distributed systems
raft = "0.7"

# Testing
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
strip = "none"

[profile.test]
inherits = "dev"
opt-level = 1
