[package]
name = "accuscene-algorithms"
version = "0.3.0"
edition = "2021"
authors = ["AccuScene Team"]
description = "Advanced compression, indexing, and storage algorithms for AccuScene Enterprise"
license = "MIT OR Apache-2.0"

[dependencies]
# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Bytes and buffer management
bytes = "1.5"

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"

# Math and algorithms
seahash = "4.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Memory mapping
memmap2 = "0.9"

# Async support
tokio = { version = "1.35", features = ["sync"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rand = "0.8"
tempfile = "3.8"

[features]
default = []
async = ["tokio"]
