[package]
name = "accuscene-analytics"
version = "0.2.0"
edition = "2021"
authors = ["AccuScene Team"]
description = "Advanced analytics engine for AccuScene Enterprise accident reconstruction platform"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.15", features = ["rayon", "serde"] }
statrs = "0.16"
rayon = "1.8"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"

# Additional dependencies for advanced analytics
serde_json = "1.0"
csv = "1.3"
parking_lot = "0.12"
futures = "0.3"
once_cell = "1.19"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
approx = "0.5"

[[bench]]
name = "analytics_bench"
harness = false

[lib]
name = "accuscene_analytics"
path = "src/lib.rs"
