[package]
name = "accuscene-cache"
version = "0.2.0"
edition = "2021"
authors = ["AccuScene Team"]
description = "Advanced multi-tier caching system for AccuScene Enterprise"
license = "MIT"

[dependencies]
# Core utilities
parking_lot = "0.12"
dashmap = "5.5"

# Concurrent caching
moka = { version = "0.12", features = ["future", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling and logging
thiserror = "1.0"
tracing = "0.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Async runtime (for moka)
tokio = { version = "1.35", features = ["rt", "sync", "time"], optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = "0.3"

[features]
default = ["async"]
async = ["tokio"]
distributed = []
