[package]
name = "accuscene-cluster"
version = "0.2.0"
edition = "2021"
authors = ["AccuScene Enterprise Team"]
description = "Distributed clustering and consensus support for AccuScene Enterprise"
license = "MIT"

[dependencies]
accuscene-core = { path = "../accuscene-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
crc32fast = "1.3"

# Networking
bytes = "1.5"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
