[package]
name = "accuscene-compression"
version = "0.1.5"
edition = "2021"
authors = ["AccuScene Team"]
description = "Advanced compression and serialization system for AccuScene Enterprise"
license = "MIT OR Apache-2.0"

[dependencies]
# Internal dependencies
accuscene-core = { path = "../accuscene-core" }

# Compression algorithms
lz4_flex = "0.11"
zstd = "0.13"
flate2 = "1.0"
snap = "1.1"
brotli = "3.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rmp-serde = "1.1"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
bytes = "1.5"
parking_lot = "0.12"
rayon = "1.8"

# Crypto (for optional encryption)
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Async support
tokio = { version = "1.0", features = ["fs", "io-util"], optional = true }
async-trait = "0.1"

# Additional utilities
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crc32fast = "1.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
criterion = "0.5"
tempfile = "3.8"

[features]
default = ["async"]
async = ["tokio"]
encryption = []

[[bench]]
name = "compression_bench"
harness = false
