[package]
name = "accuscene-core"
version = "0.1.5"
edition = "2021"
authors = ["AccuScene Enterprise Team"]
description = "Core library for AccuScene Enterprise accident recreation platform"
license = "MIT"
repository = "https://github.com/accuscene/accuscene-enterprise"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = "0.5"

[lib]
crate-type = ["lib", "staticlib"]

[[bench]]
name = "physics"
harness = false
