[package]
name = "accuscene-crypto"
version = "0.1.5"
edition = "2021"
authors = ["AccuScene Team"]
description = "Enterprise cryptographic security module for AccuScene"
license = "MIT OR Apache-2.0"

[dependencies]
# Internal dependencies
accuscene-core = { path = "../accuscene-core" }

# Core cryptographic primitives
ring = "0.17"

# Authenticated encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
scrypt = "0.11"

# Asymmetric cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Hashing
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"

# Secure random number generation
rand = "0.8"
rand_chacha = "0.3"

# Memory security
zeroize = { version = "1.7", features = ["derive"] }

# Utilities
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
base64 = "0.21"

# Additional utilities
subtle = "2.5"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = "0.5"
tempfile = "3.8"

[features]
default = ["std"]
std = []
