[package]
name = "accuscene-dashboard"
version = "0.2.5"
edition = "2021"
authors = ["AccuScene Enterprise Team"]
description = "Mobile-responsive enterprise dashboard system for AccuScene v0.2.5"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Hash maps with better performance
indexmap = { version = "2.1", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[lib]
name = "accuscene_dashboard"
path = "src/lib.rs"

[features]
default = ["full"]
full = ["persistence", "analytics"]
persistence = []
analytics = []
