[package]
name = "accuscene-database"
version = "0.2.0"
edition = "2021"
authors = ["AccuScene Team"]
description = "Enterprise database layer with connection pooling, migrations, and audit logging for AccuScene"
license = "MIT OR Apache-2.0"

[dependencies]
# Internal dependencies
accuscene-core = { path = "../accuscene-core" }

# SQLite with bundled feature
rusqlite = { version = "0.30", features = ["bundled", "blob", "functions", "vtab", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"

# PostgreSQL support (optional enterprise feature)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate", "chrono", "uuid"], optional = true }

# Query builder
sea-query = "0.30"
sea-query-rusqlite = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"

# Concurrency
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

# Regex for search
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

[features]
default = ["sqlite"]
sqlite = []
postgres = ["sqlx"]
full-text-search = []
audit = []

[[bench]]
name = "query_performance"
harness = false
