[package]
name = "accuscene-eventsourcing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Event Sourcing and CQRS system for AccuScene Enterprise"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }

# Optional database support
sqlx = { workspace = true, optional = true }

# Configuration
config = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockall = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = ["memory"]
memory = []
postgres = ["sqlx"]
full = ["memory", "postgres"]
