[package]
name = "accuscene-ffi"
version = "0.1.5"
edition = "2021"
authors = ["AccuScene Enterprise Team"]
description = "Node.js FFI bindings for AccuScene Core using napi-rs"
license = "MIT"
repository = "https://github.com/accuscene/accuscene-enterprise"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core library
accuscene-core = { path = "../accuscene-core" }

# NAPI bindings
napi = { version = "2.16", features = ["async", "serde-json"] }
napi-derive = "2.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities
tracing = "0.1"

[build-dependencies]
napi-build = "2.1"
