[package]
name = "accuscene-gestures"
version = "0.2.5"
edition = "2021"
authors = ["AccuScene Enterprise Team"]
description = "Advanced mobile gesture recognition system for AccuScene Enterprise"
license = "MIT"
repository = "https://github.com/harborgrid/accuscene-enterprise"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
nalgebra = "0.32"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
approx = "0.5"

[lib]
crate-type = ["lib", "cdylib"]
