[package]
name = "accuscene-integration"
version = "0.2.5"
edition = "2021"
authors = ["AccuScene Enterprise Team"]
description = "Unified integration layer for all AccuScene Enterprise v0.2.5 features"
license = "MIT"
repository = "https://github.com/accuscene/accuscene-enterprise"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Internal AccuScene crates - Core functionality
accuscene-core = { path = "../accuscene-core", version = "0.2.0" }
accuscene-errors = { path = "../accuscene-errors", version = "0.2.0" }
accuscene-ffi = { path = "../accuscene-ffi", version = "0.2.0" }

# Data layer crates
accuscene-database = { path = "../accuscene-database", version = "0.2.0" }
accuscene-cache = { path = "../accuscene-cache", version = "0.2.0" }
accuscene-eventsourcing = { path = "../accuscene-eventsourcing", version = "0.2.0" }

# Security and authentication
accuscene-security = { path = "../accuscene-security", version = "0.2.0" }
accuscene-crypto = { path = "../accuscene-crypto", version = "0.2.0" }
accuscene-sso = { path = "../accuscene-sso", version = "0.2.5" }

# Processing and computation
accuscene-physics = { path = "../accuscene-physics", version = "0.2.0" }
accuscene-ml = { path = "../accuscene-ml", version = "0.2.0" }
accuscene-analytics = { path = "../accuscene-analytics", version = "0.2.0" }
accuscene-jobs = { path = "../accuscene-jobs", version = "0.2.0" }

# Data handling
accuscene-compression = { path = "../accuscene-compression", version = "0.2.0" }
accuscene-streaming = { path = "../accuscene-streaming", version = "0.2.0" }
accuscene-transfer = { path = "../accuscene-transfer", version = "0.2.5" }

# Infrastructure
accuscene-cluster = { path = "../accuscene-cluster", version = "0.2.0" }
accuscene-telemetry = { path = "../accuscene-telemetry", version = "0.2.0" }

# User experience crates (v0.2.5 additions)
accuscene-a11y = { path = "../accuscene-a11y", version = "0.2.5" }
accuscene-dashboard = { path = "../accuscene-dashboard", version = "0.2.5" }
accuscene-gestures = { path = "../accuscene-gestures", version = "0.2.5" }
accuscene-notifications = { path = "../accuscene-notifications", version = "0.2.5" }
accuscene-offline = { path = "../accuscene-offline", version = "0.2.5" }
accuscene-preferences = { path = "../accuscene-preferences", version = "0.2.5" }
accuscene-search = { path = "../accuscene-search", version = "0.2.5" }
accuscene-visualization = { path = "../accuscene-visualization", version = "0.2.5" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[features]
default = ["full"]
full = [
    "core",
    "security",
    "analytics",
    "infrastructure",
    "user-experience"
]
core = []
security = []
analytics = []
infrastructure = []
user-experience = []

[lib]
name = "accuscene_integration"
path = "src/lib.rs"
