[package]
name = "accuscene-integration"
version = "0.2.5"
edition = "2021"
authors = ["AccuScene Enterprise Team"]
description = "Unified integration layer for all AccuScene Enterprise v0.2.5 features"
license = "MIT"
repository = "https://github.com/accuscene/accuscene-enterprise"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Internal AccuScene crates - Core functionality
accuscene-core = { path = "../accuscene-core" }
accuscene-errors = { path = "../accuscene-errors" }
accuscene-ffi = { path = "../accuscene-ffi" }

# Data layer crates
accuscene-database = { path = "../accuscene-database" }
accuscene-cache = { path = "../accuscene-cache" }
accuscene-eventsourcing = { path = "../accuscene-eventsourcing" }

# Security and authentication
accuscene-security = { path = "../accuscene-security" }
accuscene-crypto = { path = "../accuscene-crypto" }
accuscene-sso = { path = "../accuscene-sso" }

# Processing and computation
accuscene-physics = { path = "../accuscene-physics" }
accuscene-ml = { path = "../accuscene-ml" }
accuscene-analytics = { path = "../accuscene-analytics" }
accuscene-jobs = { path = "../accuscene-jobs" }

# Data handling
accuscene-compression = { path = "../accuscene-compression" }
accuscene-streaming = { path = "../accuscene-streaming" }
accuscene-transfer = { path = "../accuscene-transfer" }

# Infrastructure
accuscene-cluster = { path = "../accuscene-cluster" }
accuscene-telemetry = { path = "../accuscene-telemetry" }

# User experience crates (v0.2.5 additions)
accuscene-a11y = { path = "../accuscene-a11y" }
accuscene-dashboard = { path = "../accuscene-dashboard" }
accuscene-gestures = { path = "../accuscene-gestures" }
accuscene-notifications = { path = "../accuscene-notifications" }
accuscene-offline = { path = "../accuscene-offline" }
accuscene-preferences = { path = "../accuscene-preferences" }
accuscene-search = { path = "../accuscene-search" }
accuscene-visualization = { path = "../accuscene-visualization" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[features]
default = ["full"]
full = [
    "core",
    "security",
    "analytics",
    "infrastructure",
    "user-experience"
]
core = []
security = []
analytics = []
infrastructure = []
user-experience = []

[lib]
name = "accuscene_integration"
path = "src/lib.rs"
