[package]
name = "accuscene-ml"
version = "0.2.0"
edition = "2021"
authors = ["AccuScene Enterprise Team"]
description = "Machine Learning Integration System for AccuScene Enterprise"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
linfa = "0.7"
linfa-linear = "0.7"
linfa-logistic = "0.7"
linfa-clustering = "0.7"
linfa-trees = "0.7"
linfa-svm = "0.7"
linfa-reduction = "0.7"
smartcore = { version = "0.3", features = ["serde"] }
tract-onnx = { version = "0.21", optional = true }
async-trait = "0.1"
thiserror = "1.0"
rayon = "1.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
parking_lot = "0.12"
dashmap = "5.5"
bincode = "1.3"
csv = "1.3"

[features]
default = []
onnx = ["tract-onnx"]

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
approx = "0.5"
