[package]
name = "accuscene-physics-v3"
version = "0.3.0"
edition = "2021"
authors = ["AccuScene Team"]
description = "Advanced physics engine for professional accident reconstruction with rigid body dynamics, deformable materials, and vehicle-specific models"
license = "MIT OR Apache-2.0"
repository = "https://github.com/harborgrid/accuscene"
keywords = ["physics", "collision", "simulation", "accident-reconstruction", "fem"]
categories = ["simulation", "science"]

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
parking_lot = "0.12"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

# Benchmarks will be added when implemented
# [[bench]]
# name = "physics_bench"
# harness = false

[lib]
name = "accuscene_physics_v3"
path = "src/lib.rs"

[features]
default = ["parallel"]
parallel = ["rayon"]
simd = []
