[package]
name = "accuscene-search"
version = "0.2.5"
edition = "2021"
authors = ["AccuScene Team"]
description = "Advanced search and filtering system for AccuScene Enterprise"

[dependencies]
# Search engine
tantivy = "0.21"
tantivy-fst = "0.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rayon = "1.8"
dashmap = "5.5"

# Fuzzy matching
strsim = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
proptest = "1.4"

[[bench]]
name = "search_benchmarks"
harness = false
