[package]
name = "accuscene-security"
version = "0.2.0"
edition = "2021"
authors = ["AccuScene Team <team@accuscene.com>"]
description = "Advanced security, authentication, authorization, and audit system for AccuScene Enterprise"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ring = "0.17"
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
x509-parser = "0.16"
jsonwebtoken = "9.2"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
hex = "0.4"
urlencoding = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TOTP for MFA
totp-lite = "2.0"

# Password strength checking
zxcvbn = "2.2"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# Hashing
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"
